--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 body {
     background-color: rgb(253, 251, 251);
+    font-size: 16px;
+    color: teal;
+    line-height: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #cabecalho {
     top: 0;
     position: fixed;
+}
+
+.visuallyhidden {
+    display: none;
 }
