--- a/style.css
+++ b/style.css
@@ -20,3 +20,13 @@ body {
 .visuallyhidden {
     display: none;
 }
+
+.lado-esquerdo {
+    float: left;
+    width: 50%;
+}
+
+.lado-direito {
+    width: 40%;
+    float: right;
+}
